tests/contract_testcases/solana/empty_import.sol
import "" as foo;
// ---- Expect: diagnostics ----
// error: 1:8-10: import path empty
